# fast_zero

./: .gitignore  README.md  pyproject.toml
fast_zero/: app.py  db.py  models.py
migrations/: env.py
migrations/versions/: 09f77d6c8cdd_create_user_table.py
repository/: db.py
tests/: conftest.py  test_app.py  test_db.py
